Fix Vertical Alignment

--- a/flipper.css
+++ b/flipper.css
@@ -30,7 +30,7 @@
 
 #gameArea
 {	
-	position:fixed;
+	position: absolute;
 	top: 50%;
 	left: 50%;
 	padding: 0px;
